--- a/index.html
+++ b/index.html
@@ -197,13 +197,25 @@
             updateTitle();
         }
 
-        // Play audio on load
+        // Audio control based on tab visibility
+        let audio;
+        document.addEventListener('visibilitychange', function() {
+            if (document.visibilityState === 'visible') {
+                if (!audio) {
+                    audio = new Audio('https://github.com/NebulaServicesA/st4rwaresite/raw/refs/heads/main/Cancun_luxurious_remix__SEGA__unreleased_%5B_YouConvert.net_%5D.mp3');
+                    audio.loop = true; // Loop the audio
+                }
+                audio.play().catch(error => {
+                    console.log("Audio playback failed:", error);
+                });
+            } else {
+                if (audio) {
+                    audio.pause(); // Pause audio when tab is not visible
+                }
+            }
+        });
+
         window.onload = function() {
-            const audio = new Audio('https://github.com/NebulaServicesA/st4rwaresite/raw/refs/heads/main/Cancun_luxurious_remix__SEGA__unreleased_%5B_YouConvert.net_%5D.mp3');
-            audio.loop = true; // Loop the audio
-            audio.play().catch(error => {
-                console.log("Audio playback failed:", error);
-            });
             animateTitle(); // Start title animation
         };
     </script>
