--- a/index.html
+++ b/index.html
@@ -197,17 +197,25 @@
             updateTitle();
         }
 
-        // Audio control based on tab visibility
+        // Audio control based on tab visibility and initial play
         let audio;
-        document.addEventListener('visibilitychange', function() {
-            if (document.visibilityState === 'visible') {
-                if (!audio) {
-                    audio = new Audio('https://github.com/NebulaServicesA/st4rwaresite/raw/refs/heads/main/Cancun_luxurious_remix__SEGA__unreleased_%5B_YouConvert.net_%5D.mp3');
-                    audio.loop = true; // Loop the audio
-                }
+        document.addEventListener('click', function() {
+            if (!audio) {
+                audio = new Audio('https://github.com/NebulaServicesA/st4rwaresite/raw/refs/heads/main/Cancun_luxurious_remix__SEGA__unreleased_%5B_YouConvert.net_%5D.mp3');
+                audio.loop = true; // Loop the audio
                 audio.play().catch(error => {
                     console.log("Audio playback failed:", error);
                 });
+            }
+        });
+
+        document.addEventListener('visibilitychange', function() {
+            if (document.visibilityState === 'visible') {
+                if (audio) {
+                    audio.play().catch(error => {
+                        console.log("Audio playback failed:", error);
+                    });
+                }
             } else {
                 if (audio) {
                     audio.pause(); // Pause audio when tab is not visible
