--- a/index.html
+++ b/index.html
@@ -203,9 +203,11 @@
             if (!audio) {
                 audio = new Audio('https://github.com/NebulaServicesA/st4rwaresite/raw/refs/heads/main/Cancun_luxurious_remix__SEGA__unreleased_%5B_YouConvert.net_%5D.mp3');
                 audio.loop = true; // Loop the audio
-                audio.play().catch(error => {
-                    console.log("Audio playback failed:", error);
-                });
+                setTimeout(() => {
+                    audio.play().catch(error => {
+                        console.log("Audio playback failed:", error);
+                    });
+                }, 2000); // Play audio after 2 seconds
             }
         });
 
